[build-system]
requires = ["hatchling","hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "rvc-python"
version = "0.1.5"
authors = [
  { name = "daswer123", email = "daswerq123@gmail.com" },
]
description = "Use RVC via console or python scripts"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
  "torch>=2.0.0",
  "torchaudio>=2.0.0",
  "ffmpeg-python",
  "soundfile",
  "omegaconf==2.0.6",
  "requests",
  "pyworld",
  "torchcrepe",
  "praat-parselmouth>=0.4.2",
  # Allow a reasonably modern numpy across Python 3.10+:
  "numpy>=1.21,<2.0",
  # fairseq from PyPI for Python < 3.11:
  "fairseq; python_version < '3.11'",
  # For Python 3.11 we provide platform-specific prebuilt wheels (direct URLs):
  "https://github.com/BF667/fairseq/releases/download/fixed-packages/fairseq-0.12.3-cp311-cp311-linux_x86_64.whl; sys_platform == 'linux' and python_version == '3.11'",
  "https://github.com/BF667/fairseq/releases/download/fixed-packages/fairseq-0.12.3-cp311-cp311-win_amd64.whl; sys_platform == 'win32' and python_version == '3.11'",
  "faiss-cpu==1.7.3",
  "av",
  "loguru",
  "uvicorn",
  "fastapi",
  "pydantic",
  "python-multipart",
]

[project.urls]
Homepage = "https://github.com/daswer123/rvc-python"
"Bug Tracker" = "https://github.com/daswer123/rvc-python/issues"

[tool.hatch.build.targets.wheel]
only-include = ["rvc_python"]
